fix ray and sphare tests bugs